[package]
name = "coinstribute"
authors = ["William Batista <bootlegbilly@protonmail.ch>", "Luke Gaston <lsgaston@myhoosierneighbors.com>"]
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false
panic = "abort"
debug = 0

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
panic = "abort"
debug = 0
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bincode = { version = "1" }
monero = { version = "0.16", default-features = false, features = ["serde_support"] }
once_cell = { version = "1" }
warp = { version = "0.3", features = ["compression"] }
sled = { version = "0.34", features = ["miri_optimizations", "io_uring"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
rust-argon2 = { version = "1" }
rand = { version = "0.8" }
rayon = { version = "1" }
serde_derive = { version = "1" }
serde = { version = "1" }
monero_wallet = { path = "crates/monero_wallet" }