[package]
name = "coinstribute"
authors = ["William Batista <bootlegbilly@protonmail.ch>", "Luke Gaston <lsgaston@myhoosierneighbors.com>"]
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false
debug = 0

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
panic = "abort"
debug = 0
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# For easy binary serialization and deserialization
bincode = { version = "1" }
# Lots of Monero primitives to make workign with addresses easier
monero = { version = "0.16", default-features = false, features = ["serde_support"] }
# Lazy initialization of globals
once_cell = { version = "1" }
# Very fast HTTP server library
warp = { version = "0.3" }
# Very fast database library
sled = { version = "0.34", features = ["miri_optimizations", "io_uring"] }
# Multi-threaded async runtime
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
# A very secure hashing library
rust-argon2 = { version = "1" }
# Random data generator
rand = { version = "0.8" }
# Easy parallel computation
rayon = { version = "1" }
# It's serde
serde_derive = { version = "1" }
serde = { version = "1" }
# Library written by a cool guy for dealing with Monero wallet RPC
monero_wallet = { path = "crates/monero_wallet" }