[package]
name = "monero_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Faster hashmaps than std
hashbrown = { version = "0.12" }
# For encoding and decoding monero address bytes to hex, faster than hex lib
hex-simd = { version = "0.5" }
# A lot of functions for checking and generationg Monero addresses
monero = { version = "0.16", features = ["serde_support"] }
# Easy parallel processing
rayon = { version = "1" }
# An async request sending library in Rust
reqwest = { version = "0.11", default-features = false, features = ["json"] }
# A fast JSON parser that uses SIMD instructions (faster than serde_json)
simd-json = { version = "0.4", features = ["serde"] }
# Serialization
serde = { version = "1" }
